# CChess

./: .clang-format  .cppcheck-suppressions  .gitignore  CMakeLists.txt  Makefile
docs/: search-plan.md
results/: matches.md  sts.md
src/: CMakeLists.txt  main.cpp
src/ai/: Eval.cpp  Eval.h  MoveOrder.cpp  MoveOrder.h  PST.h  PawnTable.h  Search.cpp  Search.h  SearchConfig.h  TranspositionTable.cpp  TranspositionTable.h
src/book/: PolyglotBook.cpp  PolyglotBook.h
src/core/: Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  Move.cpp  Move.h  MoveList.h  Notation.cpp  Notation.h  Piece.cpp  Piece.h  Position.cpp  Position.h  Square.cpp  Square.h  Types.h  Zobrist.cpp  Zobrist.h
src/core/movegen/: AttackTables.cpp  AttackTables.h  MoveGenerator.cpp  MoveGenerator.h
src/display/: BoardRenderer.cpp  BoardRenderer.h
src/fen/: FenParser.cpp  FenParser.h  FenValidator.cpp  FenValidator.h
src/mode/: EngineMatch.cpp  EngineMatch.h  OpponentList.cpp  OpponentList.h  PerftRunner.cpp  PerftRunner.h  PlayerVsPlayer.cpp  PlayerVsPlayer.h  ProfileBench.cpp  ProfileBench.h  StsRunner.cpp  StsRunner.h
src/uci/: Uci.cpp  Uci.h  UciEngine.cpp  UciEngine.h
src/utils/: Error.h  StringUtils.cpp  StringUtils.h
tests/: CMakeLists.txt  TestMain.cpp
tests/ai/: EvalTest.cpp  MoveOrderTest.cpp  SearchTest.cpp  TranspositionTableTest.cpp
tests/core/: BitboardTest.cpp  BoardMoveTest.cpp  BoardTest.cpp  MoveGeneratorTest.cpp  MoveTest.cpp  PieceTest.cpp  PositionTest.cpp  SquareTest.cpp  ZobristTest.cpp
tests/fen/: FenParserTest.cpp  FenValidatorTest.cpp
tests/mode/: PerftTest.cpp
